--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bruno.desafiomuxi.MainActivity">
+    tools:context="com.bruno.desafiomuxi.core.MainActivity">
 
-    <TextView
-        android:id="@+id/sample_text"
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:scaleType="fitCenter"
+        app:srcCompat="@mipmap/ic_launcher"
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="277dp" />
 </android.support.constraint.ConstraintLayout>
