--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.bruno.desafiomuxi.core.MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="277dp" />
+    <ListView
+        android:id="@+id/fruitsListView"
+        android:layout_width="395dp"
+        android:layout_height="587dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" />
 </android.support.constraint.ConstraintLayout>
