--- a/app/src/main/res/layout/activity_fruit_details.xml
+++ b/app/src/main/res/layout/activity_fruit_details.xml
@@ -16,7 +16,7 @@
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
