Bug fix (Very large images were not loading)

--- a/app/src/main/res/layout/activity_fruit_details.xml
+++ b/app/src/main/res/layout/activity_fruit_details.xml
@@ -16,8 +16,7 @@
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
-        android:scaleType="fitCenter"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/fruitNameTextView"
