--- a/app/src/main/res/layout-land/activity_fruit_details.xml
+++ b/app/src/main/res/layout-land/activity_fruit_details.xml
@@ -17,8 +17,7 @@
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:cropToPadding="false"
-        android:scaleType="fitCenter"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:scaleType="fitCenter" />
 
     <LinearLayout
         android:layout_width="wrap_content"
